// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionButton should display a default RegionButton with correct styling 1`] = `
<View
  accessibilityLabel="Australia Weekend - Regional Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "paddingBottom": 32,
      "paddingLeft": 104,
      "paddingTop": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GTGuardianTitlepiece-Bold",
          "fontSize": 30,
          "lineHeight": 33,
        },
        Object {
          "color": "#052962",
          "fontSize": 20,
          "lineHeight": 24,
          "marginBottom": 5,
        },
      ]
    }
  >
    Australia Weekend
  </Text>
  <Text
    style={
      Object {
        "color": "#121212",
        "fontFamily": "GuardianTextSans-Regular",
        "fontSize": 15,
        "lineHeight": 16,
      }
    }
  >
    Published every Saturday by 6am (AEST)
  </Text>
</View>
`;

exports[`RegionButton should display a selected RegionButton with correct styling 1`] = `
<View
  accessibilityLabel="Australia Weekend - Regional Edition Button"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#052962",
      "paddingBottom": 32,
      "paddingLeft": 104,
      "paddingTop": 4,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GTGuardianTitlepiece-Bold",
          "fontSize": 30,
          "lineHeight": 33,
        },
        Object {
          "color": "white",
          "fontSize": 20,
          "lineHeight": 24,
          "marginBottom": 5,
        },
      ]
    }
  >
    Australia Weekend
  </Text>
  <Text
    style={
      Object {
        "color": "white",
        "fontFamily": "GuardianTextSans-Regular",
        "fontSize": 15,
        "lineHeight": 16,
      }
    }
  >
    Published every Saturday by 6am (AEST)
  </Text>
</View>
`;
